--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Hello, friend!</title>
 
     <link rel="stylesheet" href="styles.css" />
+
+    <script src="script.js"></script>
   </head>
   <body>
     <h1>Hello, friend!</h1>
