--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <title>Hello, friend!</title>
 
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="colors.css" />
 
     <script src="script.js"></script>
   </head>
   <body>
     <h1>Hello, friend!</h1>
     <button>Click Me!</button>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
   </body>
 </html>
